@@ -1,0 +1,203 @@
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Zabbix | Hosts</title>
+		<link rel="stylesheet" href="stylesheets/screen.css">
+		<!--<link rel="stylesheet" href="stylesheets/dark-theme.css">-->
+        <link rel="icon" href="favicon.ico">
+        <link rel="apple-touch-icon-precomposed" sizes="76x76" href="apple-touch-icon-76x76-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="120x120" href="apple-touch-icon-120x120-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="152x152" href="apple-touch-icon-152x152-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="180x180" href="apple-touch-icon-180x180-precomposed.png">
+        <link rel="icon" sizes="192x192" href="touch-icon-192x192.png">
+        <meta name="msapplication-TileImage" content="ms-tile-144x144.png">
+        <meta name="msapplication-TileColor" content="#d40000">
+	</head>
+<body>
+	<header role="banner">
+		<div class="nav" role="navigation">
+			<div class="top-nav-container"><a href="#" class="header-logo"><div class="logo"></div></a><ul class="top-nav"><li class="selected"><a tabindex="1">Monitoring</a></li><li><a tabindex="2">Inventory</a></li><li><a tabindex="3">Reports</a></li><li><a tabindex="3">Configuration</a></li><li><a tabindex="4">Administration</a></li></ul><ul class="top-nav-icons"><li><form><input type="text"><button type="button" class="btn-search"></button></form><ul class="search-suggest" style="top: 34px"><li class="suggest-hover"><span class="suggest-found">Za</span>bbix server</li><li><span class="suggest-found">Za</span>bbix server<li>Zabbix server</li></ul><li><a href="" class="top-nav-zbbshare" title="Zabbix Share">Share</a></li></li><li><a href="" class="top-nav-help" title="Help"></a></li><!--<li><a href="" class="top-nav-print" title="Print"></a></li>--><li><a href="" class="top-nav-profile" title="Profile"></a></li><li><a href="" class="top-nav-signout" title="Sign out"></a></li></ul>
+			</div>
+			<div class="top-subnav-container">
+			<ul class="top-subnav"><li><a href="" class="selected">Dashboard</a></li><li><a href="">Overview</a></li><li><a href="">Web</a></li><li><a href="">Latest data</a></li><li><a href="">Triggers</a></li><li><a href="">Events</a></li><li><a href="">Graphs</a></li><li><a href="">Screens</a></li><li><a href="">Maps</a></li><li><a href="">Discovery</a></li><li><a href="">IT services</a></li></ul>
+            <div class="server-name">This is a loooooooong loooooooong loooooooong loooooooong server name</div>
+			</div>
+		</div>
+	</header>
+	<div class="article">
+	<div class="header-title table">
+  <div class="cell"><h1>Dashboard</h1></div><div class="cell"><form><ul><li><label for="groupid">Group</label>&nbsp;<select id="groupid"><option>All</option><option>Zabbix</option></select></li><li><button type="button">Import</button></li><li><button type="button" class="btn-conf" title="Configuration"></button></li><li><button type="button" class="btn-max" title="Maximize"></button></li><li><button type="button" class="btn-min" title="Restore"></button></li></ul></form>
+	</div></div>
+		<ul class="object-group"><li><b><a href="">All hosts</a> / Zabbix server:</b></li><li class="green">Enabled</li><li><div class="status-container"><span class="status-green">z</span><span class="status-green">snmp</span><span class="status-green">jmx</span><span class="status-green">ipmi</span></div></li><li><div class="status-container"><span class="status-red">z</span><span class="status-red">snmp</span><span class="status-red">jmx</span><span class="status-red">ipmi</span></div></li><li><div class="status-container"><span class="status-grey">z</span><span class="status-grey">snmp</span><span class="status-grey">jmx</span><span class="status-grey">ipmi</span></div></li><li><span><b><a href="">Discovery</a></b></span></li><li><span><a href="">Applications</a>&nbsp;<sup>11</sup></span></li><li><span class="selected"><a href="">Items</a>&nbsp;<sup>67</sup></span></li><li><span><a href="">Triggers</a>&nbsp;<sup>41</sup></span></li><li><span><a href="">Graphs</a>&nbsp;<sup>11</sup></span></li><li><span><a href="">Discovery rules</a>&nbsp;<sup>2</sup></span></li><li><span><a href="">Web scenarios</a></span></li></ul>
+	<form>
+	<div class="table-forms-container">
+
+	<ul class="ui-tabs-nav"><li class="ui-tabs-active"><a href="#">Host</a></li><li class="ui-state-disabled"><a href="#">Templates</a></li><li><a href="#">IPMI</a></li><li><a href="#">Macros</a></li><li><a href="#">Host inventory</a></li></ul>
+
+<ul class="table-forms">
+	<li>
+		<div class="table-forms-td-left"><label for="r_shortdata">Default subject</label></div>
+		<div class="table-forms-td-right"><input type="text" id="r_shortdata" name="r_shortdata" value="{TRIGGER.STATUS}: {TRIGGER.NAME}" maxlength="255" style="width: 453px;"></div>
+	</li>
+	<li>
+		<div class="table-forms-td-left"><label for="r_longdata">Default message</label></div>
+		<div class="table-forms-td-right"><textarea id="r_longdata" name="r_longdata" rows="7" style="width: 453px;">Trigger: {TRIGGER.NAME}
+			Trigger status: {TRIGGER.STATUS}
+			Trigger severity: {TRIGGER.SEVERITY}
+			Trigger URL: {TRIGGER.URL}
+			Item values:
+			1. {ITEM.NAME1} ({HOST.NAME1}:{ITEM.KEY1}): {ITEM.VALUE1}
+			2. {ITEM.NAME2} ({HOST.NAME2}:{ITEM.KEY2}): {ITEM.VALUE2}
+			3. {ITEM.NAME3} ({HOST.NAME3}:{ITEM.KEY3}): {ITEM.VALUE3}
+			Original event ID: {EVENT.ID}</textarea>
+		</div>
+	</li>
+	<li>
+		<div class="table-forms-td-left"><label>Operations</label></div>
+		<div class="table-forms-td-right">
+			<div class="table-forms-separator" style="min-width: 540px;">
+				<table style="width: 100%;">
+					<thead>
+						<tr>
+							<th>Details</th>
+							<th>Action</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td><b>Notify all who received any messages regarding the problem before</b></td>
+							<td class="nowrap">
+								<ul class="hor-list">
+									<li><button type="button" class="btn-link">Edit</button></li>
+									<li><button type="button" class="btn-link">Remove</button></li>
+								</ul>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+	</li>
+	<li>
+		<div class="table-forms-td-left"><label>Operation details</label></div>
+		<div class="table-forms-td-right">
+			<div class="table-forms-separator" style="min-width: 540px;">
+				<ul class="table-forms">
+					<li>
+						<div class="table-forms-td-left"><label for="new_recovery_operation_operationtype">Operation type</label></div>
+						<div class="table-forms-td-right">
+							<select id="new_recovery_operation_operationtype" name="new_recovery_operation[operationtype]">
+								<option value="0">Send message</option>
+								<option value="1" selected="selected">Remote command</option>
+								<option value="11">Send recovery message</option>
+							</select>
+						</div>
+					</li>
+					<li>
+						<div class="table-forms-td-left"><label>Target list</label></div>
+						<div class="table-forms-td-right">
+							<div class="table-forms-separator" style="min-width: 453px;" id="recOpCmdList">
+								<table style="width: 100%;">
+									<thead>
+										<tr>
+											<th>Target</th>
+											<th>Action</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td colspan="3"><button type="button" id="add" name="add" class="btn-link">New</button></td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="table-forms-td-left"></div>
+						<div class="table-forms-td-right nowrap">
+							<div class="table-forms-separator" style="min-width: 453px;">
+								<table>
+									<thead>
+										<tr>
+											<th>Target</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>
+												<select id="opCmdTarget" name="opCmdTarget">
+													<option value="current">Current host</option>
+													<option value="host">Host</option>
+													<option value="hostGroup">Host group</option>
+												</select>
+											</td>
+											<!--<td><input type="hidden" id="opCmdId" name="opCmdId" value="new"><div class="multiselect-wrapper"><div id="opCmdTargetObject" class="multiselect"><div class="selected"><ul class="multiselect-list"></ul></div><input class="input" type="text" placeholder="type here to search"><div class="available" style="display: none;"></div></div><div class="multiselect-button"><button type="button" class="btn-grey">Select</button></div></div></td>-->
+										</tr>
+										<tr>
+											<td>
+												<div class="multiselect-wrapper">
+													<div class="multiselect" style="max-width: 453px">
+														<div class="selected">
+															<ul class="multiselect-list"></ul>
+														</div>
+														<input class="input" type="text" placeholder="type here to search">
+														<div class="available" style="display: none;"></div>
+													</div><div class="multiselect-button"><button type="button" class="btn-grey">Select</button></div>
+												</div>
+											</td>
+										</tr>
+										<tr>
+											<td colspan="3">
+												<ul class="hor-list">
+													<li><button type="button" id="save" name="save" class="btn-link">Add</button></li>
+													<li><button type="button" id="cancel" name="cancel" class="btn-link">Cancel</button></li>
+												</ul>
+											</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="table-forms-td-left"><label for="new_recovery_operation_opcommand_type">Type</label></div>
+						<div class="table-forms-td-right">
+							<select id="new_recovery_operation_opcommand_type" name="new_recovery_operation[opcommand][type]">
+								<option value="1">IPMI</option>
+								<option value="0" selected="selected">Custom script</option>
+								<option value="2">SSH</option>
+								<option value="3">Telnet</option>
+								<option value="4">Global script</option>
+							</select>
+						</div>
+					</li>
+					<li style="display: table-row;">
+						<div class="table-forms-td-left"><label>Script name</label></div>
+						<div class="table-forms-td-right nowrap"><input type="text" id="new_recovery_operation_opcommand_script" name="new_recovery_operation[opcommand][script]" value="" readonly="readonly" maxlength="255" style="width: 453px;"><div class="form-input-margin"></div><button type="button" id="select_recovery_operation_opcommand_script" name="select_recovery_operation_opcommand_script" class="btn-grey">Select</button>
+						</div>
+					</li>
+				</ul>
+				<ul class="hor-list">
+					<li><button type="button" class="btn-link">Add</button></li>
+					<li><button type="button" class="btn-link">Cancel</button></li>
+				</ul>
+			</div>
+		</div>
+	</li>
+</ul>
+		<ul class="table-forms">
+		<li><div class="table-forms-td-left">&nbsp;</div><div class="table-forms-td-right tfoot-buttons"><button type="button">Update</button><button type="button" class="btn-alt">Clone</button><button type="button" class="btn-alt">Full clone</button><button type="button" class="btn-alt">Delete</button><button type="button" class="btn-alt">Cancel</button></div>
+		</li>
+		</ul>
+	</div>
+	</form>
+	</div>
+	<div class="footer">
+	Zabbix 2.4.1. &copy; 2001&ndash;2015, <a href="http://www.zabbix.com" class="grey link-alt" target="_blank">Zabbix SIA</a>
+	</div>
+</body>
+</html>
