@@ -1012,6 +1012,7 @@ footer {
 	position: relative;
 	vertical-align: top;
 	display: inline-block;
+	white-space: nowrap;
 }
 
 .multiselect {
