@@ -117,10 +117,10 @@ static void	process_test_data(zbx_uint64_t httptestid, int lastfailedstep, doubl
 
 	DB_RESULT	result;
 	DB_ROW		row;
-	unsigned char	types[3], states[3];
+	unsigned char	types[3];
 	DC_ITEM		items[3];
 	zbx_uint64_t	itemids[3];
-	int		lastclocks[3], errcodes[3];
+	int		errcodes[3];
 	size_t		i, num = 0;
 	AGENT_RESULT    value;
 
@@ -192,13 +192,8 @@ static void	process_test_data(zbx_uint64_t httptestid, int lastfailedstep, doubl
 		items[i].state = ITEM_STATE_NORMAL;
 		dc_add_history(items[i].itemid, items[i].value_type, 0, &value, ts, items[i].state, NULL);
 
-		states[i] = items[i].state;
-		lastclocks[i] = ts->sec;
-
 		free_result(&value);
 	}
-
-	DCrequeue_items(itemids, states, lastclocks, NULL, NULL, errcodes, num);
 
 	DCconfig_clean_items(items, errcodes, num);
 
@@ -211,12 +206,12 @@ static void	process_step_data(zbx_uint64_t httpstepid, zbx_httpstat_t *stat, zbx
 
 	DB_RESULT	result;
 	DB_ROW		row;
-	unsigned char	types[3], states[3];
+	unsigned char	types[3];
 	DC_ITEM		items[3];
 	zbx_uint64_t	itemids[3];
-	int		lastclocks[3], errcodes[3];
+	int		errcodes[3];
 	size_t		i, num = 0;
-	AGENT_RESULT    value;
+	AGENT_RESULT	value;
 
 	zabbix_log(LOG_LEVEL_DEBUG, "In %s() rspcode:%ld time:" ZBX_FS_DBL " speed:" ZBX_FS_DBL,
 			__function_name, stat->rspcode, stat->total_time, stat->speed_download);
@@ -280,13 +275,8 @@ static void	process_step_data(zbx_uint64_t httpstepid, zbx_httpstat_t *stat, zbx
 		items[i].state = ITEM_STATE_NORMAL;
 		dc_add_history(items[i].itemid, items[i].value_type, 0, &value, ts, items[i].state, NULL);
 
-		states[i] = items[i].state;
-		lastclocks[i] = ts->sec;
-
 		free_result(&value);
 	}
-
-	DCrequeue_items(itemids, states, lastclocks, NULL, NULL, errcodes, num);
 
 	DCconfig_clean_items(items, errcodes, num);
 
@@ -378,6 +368,10 @@ static void	process_httptest(DC_HOST *host, zbx_httptest_t *httptest)
 			" where httptestid=" ZBX_FS_UI64
 			" order by no",
 			httptest->httptest.httptestid);
+
+	/* Explicitly initialize the name. If we compile without libCURL support, we avoid the potential usage */
+	/* of unititialized values*/
+	httpstep.name = NULL;
 
 #ifdef HAVE_LIBCURL
 	if (NULL == (easyhandle = curl_easy_init()))
@@ -690,6 +684,10 @@ static void	process_httptest(DC_HOST *host, zbx_httptest_t *httptest)
 
 				zbx_free(var_err_str);
 			}
+
+			zbx_timespec(&ts);
+			process_step_data(httpstep.httpstepid, &stat, &ts);
+
 			zbx_free(page.data);
 		}
 		else
@@ -701,9 +699,6 @@ httpstep_error:
 		zbx_free(httpstep.required);
 		zbx_free(httpstep.posts);
 		zbx_free(httpstep.url);
-
-		zbx_timespec(&ts);
-		process_step_data(httpstep.httpstepid, &stat, &ts);
 
 		if (NULL != err_str)
 		{
@@ -729,22 +724,13 @@ clean:
 			/* or we have been compiled without cURL library */
 
 			lastfailedstep = 1;
-
-			if (NULL != (row = DBfetch(result)))
-			{
-				ZBX_STR2UINT64(httpstep.httpstepid, row[0]);
-				httpstep.name = row[2];
-
-				memset(&stat, 0, sizeof(stat));
-
-				process_step_data(httpstep.httpstepid, &stat, &ts);
-			}
-			else
-				THIS_SHOULD_NEVER_HAPPEN;
 		}
 
-		zabbix_log(LOG_LEVEL_WARNING, "cannot process step \"%s\" of web scenario \"%s\" on host \"%s\": %s",
-				httpstep.name, httptest->httptest.name, host->name, err_str);
+		if (NULL != httpstep.name)
+		{
+			zabbix_log(LOG_LEVEL_DEBUG, "cannot process step \"%s\" of web scenario \"%s\" on host \"%s\": %s",
+					httpstep.name, httptest->httptest.name, host->name, err_str);
+		}
 	}
 	DBfree_result(result);
 
