@@ -6,6 +6,9 @@ New features:
 ..F.....S. [ZBXNEXT-3572] added option to control amount of queued items (vjaceslavs)
 
 Bug fixes:
+........S. [ZBX-11781] fixed potential buffer overflow in the housekeeper process
+.......PS. [ZBX-10902] fixed wrong averages in web monitoring if a web server doesn't respond to a request (abs)
+..F....... [ZBX-11365] fixed button and multiselect positioning in action operations edit form (Ivo, Pavel)
 .......PS. [ZBX-11655] fixed Oracle and MySQL column limit calculation when using UTF-8 (vso)
 ........S. [ZBX-11703] removed possibility to execute commit without transaction in processing LLD rules (Sergejs)
 ........S. [ZBX-11402] fixed unnecessary notification sending from dependent triggers (viktors)
@@ -1618,6 +1621,8 @@ Changes for 2.2.17rc1
 New features:
 
 Bug fixes:
+........S. [ZBX-11781] fixed potential buffer overflow in the housekeeper process
+.......PS. [ZBX-10902] fixed wrong averages in web monitoring if a web server doesn't respond to a request (abs)
 .......PS. [ZBX-11655] fixed Oracle and MySQL column limit calculation when using UTF-8 (vso)
 ...G...... [ZBX-11719] fixed reading files with vfs.file.regmatch[] and vfs.file.cksum[] keys on windows (Sergejs)
 .......PS. [ZBX-11587] fixed handling database failure during transaction commit (viktors)
